# Dynamics_Control

./: CMakeLists.txt
include/: Integrator.hpp  Simulation.hpp  StateSpace.hpp  main.hpp  matrix.hpp  vec.hpp
src/: CMakeLists.txt  Integrator.cpp  Simulation.cpp  StateSpace.cpp  main.cpp  matrix.cpp
test/: CMakeLists.txt  Integrator.test.cpp  Matrix.test.cpp  Simulation.test.cpp  StateSpace.test.cpp  test_main.cpp
